# blackhole

./: .gitignore  LICENSE  README.md  blackhole.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
examples/: ddp_training.py  demo.py  llm_finetune.py  llm_pretrain.py  lora_llm.py  mnist_cnn.py  resnet_cifar.py  transformer_lm.py  vit_finetune.py
tests/: test_blackhole.py
