[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackhole-opt"
version = "1.0.0"
description = "General Relativity based optimizer that beats Adam/AdamW"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fardin Sabid", email = "contact.fardinsabid@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/fardinsabid/blackhole"
Repository = "https://github.com/fardinsabid/blackhole"
Issues = "https://github.com/fardinsabid/blackhole/issues"